fixed mobile nav spacing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -148,7 +148,7 @@ p {
     }
 
     .nav-bar {
-        padding-top: 20px;
+        padding-top: 0px;
         margin-bottom: 10px;
         width: 100%;
         nav {
